samples/_failures_safe/1761369256_403307_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2786ea9.c: In function ‘main’:
./samples/SAFE/__tmp_c2786ea9.c:172:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  172 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_c2786ea9.c:172:5: error: expected declaration or statement at end of input
